--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swiftraccoon-notes",
   "private": true,
-  "homepage": "https://swiftraccoon.github.io/notes",
+  "homepage": "https://swiftraccoon.github.io/",
   "description": "A personal Gatsby blog for my notes",
   "version": "0.1.0",
   "author": "swiftraccoon",
